<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>liquidjava</groupId>
		<artifactId>liquidjava-umbrella</artifactId>
		<version>1.0</version>
	</parent>

	<groupId>io.github.liquid-java</groupId>
	<artifactId>liquidjava-verifier</artifactId>
	<version>0.0.2</version>
	<name>liquidjava-verifier</name>
	<description>LiquidJava Verifier</description>
	<url>https://github.com/liquid-java/liquidjava</url>
	<packaging>jar</packaging>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>CatarinaGamboa</id>
			<name>Catarina Gamboa</name>
			<email>CatarinaGamboa@users.noreply.github.com</email>
			<url>https://github.com/CatarinaGamboa</url>
		</developer>
		<developer>
			<id>alcides</id>
			<name>Alcides Fonseca</name>
			<email>alcides@users.noreply.github.com</email>
			<url>https://github.com/alcides</url>
		</developer>
		<developer>
			<id>pcanelas</id>
			<name>Paulo Canelas</name>
			<email>pcanelas@users.noreply.github.com</email>
			<url>https://github.com/pcanelas</url>
		</developer>
		<developer>
			<id>rcosta358</id>
			<name>Ricardo Costa</name>
			<email>rcosta358@users.noreply.github.com</email>
			<url>https://github.com/rcosta358</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/liquid-java/liquidjava.git</connection>
		<developerConnection>scm:git:ssh://github.com:liquid-java/liquidjava.git</developerConnection>
		<url>https://github.com/liquid-java/liquidjava/tree/main</url>
	</scm>

	<build>
		<finalName>${jar.finalName}</finalName>
		<plugins>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.16.0</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<compilerSource>20</compilerSource>
					<compilerCompliance>20</compilerCompliance>
					<compilerTargetPlatform>20</compilerTargetPlatform>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${pVersion.compiler}</version>
				<configuration>
					<source>20</source>
					<target>20</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>

			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.7.1</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>liquidjava.api.CommandLineLauncher</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Generate source JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<!-- Generate Javadoc JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doclint>none</doclint>
					<source>20</source>
				</configuration>
			</plugin>
			
			<!-- GPG Signing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<skip>${gpg.skip}</skip>
				</configuration>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<!-- Skip default deploy -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			
			<!-- Central Publishing Plugin -->
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.9.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<skipPublishing>${maven.deploy.skip}</skipPublishing>
					<!-- <autoPublish>true</autoPublish> -->
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>central</id>
			<url>https://central.sonatype.com/api/v1/publisher</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javaVersion>20</javaVersion>
		<maven.compiler.source>20</maven.compiler.source>
		<maven.compiler.target>20</maven.compiler.target>
		<!-- versions -->
		<version.junit>5.10.0</version.junit>
		<version.memcompiler>1.3.0</version.memcompiler>
		<version.spoon>10.4.2</version.spoon>
		<version.z3>4.8.17</version.z3>
		<!-- plugin versions -->
		<pVersion.compiler>3.8.0</pVersion.compiler>
		<pVersion.surefire>3.1.2</pVersion.surefire>
		<!-- name of the generated plugin -->
		<jar.finalName>${project.artifactId}-${project.version}</jar.finalName>
		<gpg.skip>true</gpg.skip>
		<maven.deploy.skip>true</maven.deploy.skip>
	</properties>

	<repositories>

		<repository>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<dependencies>
		<!-- Only needed to run tests in a version of IntelliJ IDEA that bundles older versions -->
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.12</version>
		</dependency>
		<dependency>
			<groupId>org.mdkt.compiler</groupId>
			<artifactId>InMemoryJavaCompiler</artifactId>
			<version>${version.memcompiler}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.inria.gforge.spoon/spoon-core -->
		<dependency>
			<groupId>fr.inria.gforge.spoon</groupId>
			<artifactId>spoon-core</artifactId>
			<version>${version.spoon}</version>
		</dependency>
		<dependency>
			<groupId>tools.aqua</groupId>
			<artifactId>z3-turnkey</artifactId>
			<version>${version.z3}</version>
		</dependency>

		<dependency>
			<groupId>io.github.liquid-java</groupId>
			<artifactId>liquidjava-api</artifactId>
			<version>0.0.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4 -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.7.1</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.7.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
